@@ -113,9 +113,8 @@
 (setq ring-bell-function 'ignore)
 (global-auto-revert-mode t)
 (setq-default indicate-buffer-boundaries (quote left))
-(when (and (fboundp 'global-linum-mode)
-           (not (eq system-type 'windows-nt)))
-  (global-linum-mode 1))                ; conflict with company-mode in win32
+(when (fboundp 'global-linum-mode)
+  (global-linum-mode 1))
 
 ;; ffap
 (ffap-bindings)
